# ai-task-desk

./: .gitmessage  start.sh
backend/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/.mc/Task 1/Test/: brief.md
backend/.mc/new/New Brief/: checklist.md
backend/.mc/sprint-23/new/New Brief/: .meta.yaml  brief.md
backend/scripts/: init_db.py
backend/scripts/git_hooks/: README.md  post-commit  pre-commit
backend/src/mission_control/: config.py  main.py
backend/src/mission_control/adapters/: exporter.py  file_bridge.py  filesystem.py  jira_client.py  watcher.py
backend/src/mission_control/api/: deps.py  errors.py  schemas.py
backend/src/mission_control/api/routes/: auth.py  briefs.py  contacts.py  folders.py  plan.py  (+4 more)
backend/src/mission_control/db/: database.py  models.py  session.py
backend/src/mission_control/domain/: enums.py  events.py  models.py
backend/src/mission_control/repositories/: base.py  brief_repo.py  link_repo.py  review_repo.py
backend/src/mission_control/services/: brief_service.py  contact_service.py  folder_service.py  notification_service.py  plan_service.py  sprint_service.py
backend/src/mission_control/usecases/: detect_links.py  export_context.py  rebuild_index.py
backend/tests/: conftest.py
backend/tests/fixtures/sample_task/: .meta.yaml  brief.md  checklist.md  decisions.md
backend/tests/integration/: test_api.py  test_api_briefs.py  test_filesystem.py  test_repositories.py  test_watcher.py
backend/tests/unit/: test_link_detection.py  test_models.py
(+36 files in other folders)
